# sample-django

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflows/: push.yaml
mysite/: asgi.py  settings.py
polls/migrations/: 0001_initial.py
templates/: index.html
