[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct Web-based polls.
long_description = file: README.rst
url = https://kantan.tech/
author = Kantan
author_email = admin@kantan.tech
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.1

###
# Coverage
###
[coverage:run]
data_file = .coverage/coverage
branch = true
omit =
  ./manage.py
  */tests/*
  */settings/*
  */admin.py
  */apps.py
  */migrations/*
  ./env/*
source = .

[coverage:report]
fail_under = 94.5
skip_covered = true
show_missing = true

[coverage:html]
directory = .coverage/htmlcov

###
# Flake8
###
[flake8]
max-line-length = 88
ignore = E203,E501,W503
exclude = env/* tmp/*

###
# iSort
###
[isort]
profile = black
skip = env

###
# Mypy settings and missing imports
###
[mypy]
plugins = mypy_django_plugin.main

[mypy-*.migrations.*]
ignore_errors = True

[mypy-django.*]
ignore_missing_imports = True

[mypy.plugins.django-stubs]
django_settings_module = mysite.settings

[mypy-dj_database_url.*]
ignore_missing_imports = True